调整cloud相关代码