@@ -1,6 +1,5 @@
 package io.shulie.takin.cloud.biz.service.scenetask.impl;
 
-import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -10,7 +9,14 @@ import javax.annotation.Resource;
 import com.alibaba.fastjson.JSON;
 
 import cn.hutool.core.util.StrUtil;
+import io.shulie.takin.adapter.api.entrypoint.pressure.PressureTaskApi;
+import io.shulie.takin.adapter.api.model.request.pressure.PressureParamModifyReq;
+import io.shulie.takin.adapter.api.model.request.pressure.PressureParamModifyReq.PressureParam;
+import io.shulie.takin.adapter.api.model.request.pressure.PressureParamsReq;
+import io.shulie.takin.cloud.biz.input.scenemanage.SceneTaskQueryTpsInput;
+import io.shulie.takin.cloud.biz.input.scenemanage.SceneTaskUpdateTpsInput;
 import io.shulie.takin.cloud.biz.output.report.ReportDetailOutput;
+import io.shulie.takin.cloud.biz.output.report.ReportOutput;
 import io.shulie.takin.cloud.biz.service.report.CloudReportService;
 import io.shulie.takin.cloud.biz.service.scene.CloudSceneService;
 import io.shulie.takin.cloud.biz.service.scenetask.DynamicTpsService;
@@ -19,7 +25,6 @@ import io.shulie.takin.cloud.common.exception.TakinCloudExceptionEnum;
 import io.shulie.takin.cloud.common.utils.JmxUtil;
 import io.shulie.takin.cloud.data.model.mysql.SceneManageEntity;
 import io.shulie.takin.cloud.ext.content.script.ScriptNode;
-import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.stereotype.Service;
 
 /**
@@ -30,18 +35,11 @@ import org.springframework.stereotype.Service;
 @Service
 public class DynamicTpsServiceImpl implements DynamicTpsService {
     @Resource
-    CloudSceneService cloudSceneService;
+    private CloudSceneService cloudSceneService;
     @Resource
-    CloudReportService cloudReportService;
+    private CloudReportService cloudReportService;
     @Resource
-    StringRedisTemplate stringRedisTemplate;
-
-    public static final String MAP_KEY = "REDIS_TPS_MAP";
-    /**
-     * 这个字段很操蛋,因为引擎那边的Redis工具类封装的很麻烦,暂时用这个方式
-     */
-    public static final String ALL_ITEM_KEY = "REDIS_TPS_ALL_KEY";
-    public static final String PRESSURE_ENGINE_INSTANCE_REDIS_KEY = "PRESSURE:ENGINE:INSTANCE";
+    private PressureTaskApi pressureTaskApi;
 
     /**
      * 获取动态TPS目标值
@@ -53,18 +51,16 @@ public class DynamicTpsServiceImpl implements DynamicTpsService {
      * @return 值-可能为空
      */
     @Override
-    public Double get(long sceneId, long reportId, long tenantId, String md5) {
-        // 转换节点MD5为线程组MD5
-        md5 = getThreadGroupMd5ByXpathMd5(sceneId, md5);
-        // 获取全部项
-        List<String> allItem = getAllItem(sceneId, reportId, tenantId);
-        // 如果AllItem中没有,返回空
-        if (!allItem.contains(md5)) {return null;}
-        Object valueString = stringRedisTemplate.opsForHash().get(getMapKey(sceneId, reportId, tenantId), md5);
-        // 如果Redis中没有值,返回空
-        if (valueString == null) {return null;}
-        // 进行数值转换并返回
-        return Double.valueOf(valueString.toString());
+    public Double get(SceneTaskQueryTpsInput input) {
+        // TODO: 调用cloud动态tps获取接口 ( 只需要提取tps值 )
+        Long sceneId = input.getSceneId();
+        ReportOutput report = cloudReportService.selectById(input.getReportId());
+        PressureParamsReq req = new PressureParamsReq();
+        req.setTaskId(report.getPressureTaskId());
+        req.setBindRef(getThreadGroupMd5ByXpathMd5(sceneId, input.getXpathMd5()));
+        pressureTaskApi.params(req);
+        // TODO: 获取对应的tps值
+        return new Double(0);
     }
 
     /**
@@ -91,7 +87,8 @@ public class DynamicTpsServiceImpl implements DynamicTpsService {
         if (oneDepthScriptAnalysis == null) {
             throw new TakinCloudException(TakinCloudExceptionEnum.COMMON_VERIFY_ERROR, "脚本解析错误");
         }
-        ScriptNode scriptNode = oneDepthScriptAnalysis.stream().filter(t -> md5.equals(t.getXpathMd5())).findAny().orElse(null);
+        ScriptNode scriptNode = oneDepthScriptAnalysis.stream().filter(t -> md5.equals(t.getXpathMd5())).findAny()
+            .orElse(null);
         if (scriptNode == null) {
             throw new TakinCloudException(TakinCloudExceptionEnum.COMMON_VERIFY_ERROR, "未找到线程组节点");
         }
@@ -106,25 +103,17 @@ public class DynamicTpsServiceImpl implements DynamicTpsService {
     /**
      * 设置动态TPS目标值
      *
-     * @param sceneId  场景主键
-     * @param reportId 报告主键
-     * @param tenantId 租户主键
-     * @param md5      脚本节点md5
-     * @param value    目标值
+     * @param input req
      */
     @Override
-    public synchronized void set(long sceneId, long reportId, long tenantId, String md5, double value) {
-        // 转换节点MD5为线程组MD5
-        md5 = getThreadGroupMd5ByXpathMd5(sceneId, md5);
-        // 获取全部项
-        List<String> allItem = getAllItem(sceneId, reportId, tenantId);
-        // 如果是新设定的,要在AllItem中添加项
-        if (!allItem.contains(md5)) {
-            allItem.add(md5);
-            stringRedisTemplate.opsForValue().set(getAllItemKey(sceneId, reportId, tenantId), JSON.toJSONString(allItem));
-        }
-        // 设定map值
-        stringRedisTemplate.opsForHash().put(getMapKey(sceneId, reportId, tenantId), md5, String.valueOf(value));
+    public synchronized void set(SceneTaskUpdateTpsInput input) {
+        Long sceneId = input.getSceneId();
+        ReportOutput report = cloudReportService.selectById(input.getReportId());
+        PressureParamModifyReq req = new PressureParamModifyReq();
+        req.setTaskId(report.getPressureTaskId());
+        req.setBingRef(getThreadGroupMd5ByXpathMd5(sceneId, input.getXpathMd5()));
+        req.setParams(PressureParam.of(1, String.valueOf(input.getTpsNum())));
+        pressureTaskApi.modifyParam(req);
     }
 
     /**
@@ -142,7 +131,8 @@ public class DynamicTpsServiceImpl implements DynamicTpsService {
         List<ScriptNode> scriptAnalysis = JSON.parseArray(scriptAnalysisString, ScriptNode.class);
         if (scriptAnalysis != null && scriptAnalysis.size() == 1) {
             HashMap<String, String> container = new HashMap<>(scriptAnalysis.size());
-            scriptAnalysis.get(0).getChildren().forEach(t -> fullThreadGroupWhitNodeRelation(container, t.getXpathMd5(), t));
+            scriptAnalysis.get(0).getChildren().forEach(
+                t -> fullThreadGroupWhitNodeRelation(container, t.getXpathMd5(), t));
             String md5 = container.get(xpathMd5);
             if (StrUtil.isBlank(md5)) {
                 throw new TakinCloudException(TakinCloudExceptionEnum.COMMON_VERIFY_ERROR, "未找到节点所对应的线程组节点");
@@ -163,7 +153,8 @@ public class DynamicTpsServiceImpl implements DynamicTpsService {
      * @param threadGroupMd5 线程组MD5
      * @param node           节点
      */
-    private void fullThreadGroupWhitNodeRelation(Map<String, String> container, String threadGroupMd5, ScriptNode node) {
+    private void fullThreadGroupWhitNodeRelation(Map<String, String> container, String threadGroupMd5,
+        ScriptNode node) {
         // 填充本节点
         container.put(node.getXpathMd5(), threadGroupMd5);
         // 填充子节点
@@ -171,62 +162,4 @@ public class DynamicTpsServiceImpl implements DynamicTpsService {
             node.getChildren().forEach(t -> fullThreadGroupWhitNodeRelation(container, threadGroupMd5, t));
         }
     }
-
-    /**
-     * 获取数据溯源部分的字符串
-     *
-     * @param sceneId  场景主键
-     * @param reportId 报告主键
-     * @param tenantId 租户主键
-     * @return 溯源字符串
-     */
-    private String getDataTracePart(long sceneId, long reportId, long tenantId) {
-        return String.format("%s:%s:%s", sceneId, reportId, tenantId);
-    }
-
-    /**
-     * 获取redis中Map的Key
-     *
-     * @param sceneId  场景主键
-     * @param reportId 报告主键
-     * @param tenantId 租户主键
-     * @return map对应的key
-     */
-    private String getMapKey(long sceneId, long reportId, long tenantId) {
-        String dataTracePart = getDataTracePart(sceneId, reportId, tenantId);
-        return StrUtil.format("{}:{}:{}", PRESSURE_ENGINE_INSTANCE_REDIS_KEY, dataTracePart, MAP_KEY);
-    }
-
-    /**
-     * 获取redis中AllItem的Key
-     *
-     * @param sceneId  场景主键
-     * @param reportId 报告主键
-     * @param tenantId 租户主键
-     * @return AllItem对应的key
-     */
-    private String getAllItemKey(long sceneId, long reportId, long tenantId) {
-        String dataTracePart = getDataTracePart(sceneId, reportId, tenantId);
-        return StrUtil.format("{}:{}:{}", PRESSURE_ENGINE_INSTANCE_REDIS_KEY, dataTracePart, ALL_ITEM_KEY);
-    }
-
-    /**
-     * 获取AllItem
-     *
-     * @param sceneId  场景主键
-     * @param reportId 报告主键
-     * @param tenantId 租户主键
-     * @return AllItem
-     */
-    private List<String> getAllItem(long sceneId, long reportId, long tenantId) {
-        List<String> itemList;
-        String allItemString = stringRedisTemplate.opsForValue().get(getAllItemKey(sceneId, reportId, tenantId));
-        if (StrUtil.isBlank(allItemString)) {
-            itemList = new ArrayList<>(0);
-        } else {
-            itemList = JSON.parseArray(allItemString, String.class);
-        }
-        return itemList;
-    }
-
 }
